[tool.poetry]
name = "parfor"
version = "2023.11.3"
description = "A package to mimic the use of parfor as done in Matlab."
authors = ["Wim Pomp <wimpomp@gmail.com>"]
license = "GPLv3"
readme = "README.md"
keywords = ["parfor", "concurrency", "multiprocessing", "parallel"]
repository = "https://github.com/wimpomp/parfor"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = ">=4.50.0"
dill = ">=0.3.0"
pytest = { version = "*", optional = true }

[tool.poetry.extras]
test = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
