[project]
name = "parfor"
version = "2026.1.0"
description = "A package to mimic the use of parfor as done in Matlab."
authors = [
    { name = "Wim Pomp-Pervova", email = "wimpomp@gmail.com" }
]
license = { text = "MIT"}
readme = "README.md"
keywords = ["parfor", "concurrency", "multiprocessing", "parallel"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "tqdm >= 4.50.0",
    "ray",
]

[project.urls]
repository = "https://github.com/wimpomp/parfor"

[project.optional-dependencies]
test = ["pytest"]

[tool.ruff]
line-length = 119
indent-width = 4

[tool.isort]
line_length = 119
